# qwen3-vl-demo

./: .dvcignore  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  PIPELINE.md  README.ja.md  README.md  app.py  dvc.yaml  params.yaml  params_default.yaml  params_flux.yaml  params_smoke.yaml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: default.yaml  flux.yaml  smoke.yaml
docs/: architecture.md  experiment_report.md  experiment_report_persona_query.md  experiment_report_preference_gamma_sweep.md  experiment_report_subject_query.md  flash_attention_report.md  how-it-works.md  qwen3_vl_embedding_multimodal_research.md  reranker_ft_underperformance.md  specification.md
docs/experiments/: experiment_report_distillation.md  experiment_report_distillation_issue20.md  experiment_report_distillation_issue20_final.md  experiment_report_distillation_issue25.md  experiment_report_distillation_issue30.md  experiment_report_embedding_ft_curve_issue33.md  experiment_report_persona_query.md  experiment_report_preference_gamma_sweep.md  experiment_report_seed1.md  experiment_report_subject_query.md  reranker_ft_underperformance.md
docs/images/: README.md
src/qwen3vl_demo/: __init__.py  config.py  distill.py  evaluate.py  figures.py  generate_data.py  image_cache.py  metrics.py  models.py  plots.py  preference.py  prompts.py  rerank.py  tracking.py  train.py  train_reranker.py
tests/: test_config.py  test_distill.py  test_figures.py  test_flash_attn_benchmark.py  test_generate_data.py  test_image_cache.py  test_metrics.py  test_plots.py  test_preference.py  test_prompts.py  test_rerank.py  test_tracking.py  test_train_reranker.py
