[project]
name = "qwen3vl-demo"
version = "0.1.0"
description = "Fine-tuning demo: synthesize an image dataset with SD-Turbo, fine-tune Qwen3-VL-Embedding-2B with Sentence Transformers, and rerank with Qwen3-VL-Reranker-2B."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "u-masao" }]

# Core dependencies needed for every profile (including the CPU smoke test).
# Torch is intentionally NOT pinned to a CUDA build here so the package also
# imports on CPU-only machines. On the GPU box, install a CUDA torch build
# (see README) before running the `default` profile.
dependencies = [
    "torch>=2.2",
    "torchvision",
    "sentence-transformers[image]>=5.4.0",
    "transformers>=4.57.0",
    "datasets>=3.0.0",
    "diffusers>=0.31.0",
    "accelerate>=1.0.0",
    "pillow>=10.0.0",
    "numpy>=1.26",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Extras that only make sense on the GPU box. Installed explicitly there.
gpu = [
    # "flash-attn>=2.6.0; platform_system == 'Linux'",
    # "bitsandbytes>=0.43.0",
]
dev = [
    "ruff>=0.6.0",
    "dvc>=3.0",
]

[project.scripts]
qwen3vl-generate-data = "qwen3vl_demo.generate_data:main"
qwen3vl-evaluate = "qwen3vl_demo.evaluate:main"
qwen3vl-train = "qwen3vl_demo.train:main"
qwen3vl-rerank = "qwen3vl_demo.rerank:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
torch = [{ index = "pytorch-cu126", marker = "sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-cu126", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["src/qwen3vl_demo"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
